[EDELIVERY-2950] - Clean the Tomcat Docker scripts